# rpcz

./: CMakeLists.txt  README.md  todo.txt
cmake_modules/: FindZeroMQ.cmake  rpcz_functions.cmake
doc/: design.txt
examples/cpp/: CMakeLists.txt  async_client.cc  async_client_adv.cc  example_client.cc  example_server.cc  sync_client.cc
examples/cpp/full_duplex/: CMakeLists.txt  dealer.cc  router.cc
examples/python/: example_client.py  example_server.py
include/rpcz/: application.hpp  application_error_code.hpp  callback.hpp.pump  channel_ptr.hpp  common.hpp  connection.hpp  connection_manager.hpp  connection_ptr.hpp  cpp_handler_wrapper.hpp  cpp_service.hpp  default_service_factory.hpp  error_code.hpp  error_handler.hpp  export.hpp  handler_wrapper.hpp  ichannel.hpp  invalid_message_error.hpp  iservice.hpp  replier.hpp  reply_context.hpp  reply_sender.hpp  requester.hpp  requester_ptr.hpp  responder.hpp  response_message_handler.hpp  rpc.hpp  rpc_channel.hpp  rpc_channel_ptr.hpp  rpc_controller.hpp  rpc_error.hpp  rpc_service.hpp  rpcz.hpp  rpcz.pb.h  rpcz_api.hpp  server.hpp  server_channel.hpp  service.hpp  service_factory.hpp  service_factory_ptr.hpp  service_ptr.hpp  (+4 more)
python/: .gitignore  compiler.py  setup.py
python/cython/: python_rpc_service.hpp  pywraprpcz.cpp  pywraprpcz.pyx
python/rpcz/: Application.py  __init__.py
src/: CMakeLists.txt
src/rpcz/: CMakeLists.txt  application.cc  application_options.cc  application_options.hpp  assert_application_error_code.cc  broker_thread.cc  broker_thread.hpp  client_connection.cc  client_connection.hpp  clock.cc  clock.hpp  connection.cc  connection.hpp  connection_info.hpp  connection_info_hash.hpp  connection_info_ptr.hpp  connection_info_zmq.hpp  connection_manager.cc  connection_manager.hpp  connection_manager_thread.cc  connection_manager_thread.hpp  cpp_handler_wrapper.cc  cpp_service.cc  dealer_channel.cc  dealer_connection.cc  dealer_connection.hpp  event_id_generator.cc  event_id_generator.hpp  handle_response.cc  handle_response.hpp  internal_commands.hpp  manager.cc  manager.hpp  manager_dyn_singleton_helper.cc  manager_dyn_singleton_helper.hpp  manager_ptr.hpp  manager_status.hpp  mono_state_service.hpp  proto_rpc_service.hpp  reactor.cc  (+60 more)
src/rpcz/plugin/: CMakeLists.txt
src/rpcz/plugin/cpp/: CMakeLists.txt  file_generator.cc  file_generator.h  rpcz_cpp_generator.cc  rpcz_cpp_service.cc  rpcz_cpp_service.h
src/rpcz/plugin/python/: CMakeLists.txt  rpcz_python_generator.cc  rpcz_python_main.cc
src/rpcz/proto/: protoc.bat  rpcz.proto
src/rpcz/worker/: worker.cc  worker.hpp  worker_cmd.cc  worker_cmd.hpp  worker_cmd_maker.cc  worker_cmd_maker.hpp  worker_cmd_ptr.hpp  worker_cmd_queue.cc  worker_cmd_queue_ptr.hpp  worker_thread_group.cc  worker_thread_group.hpp  workers_commander.cc  workers_commander.hpp  workers_commander_ptr.hpp
test/: CMakeLists.txt  application_test.cc  client_server_test.cc  connection_manager_test.cc  manager_test.cc  request_interface_test.cc  rpcz_gtest_main.cc  sync_event.hpp
test/proto/: CMakeLists.txt
